# udsdump

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/udsdump/: __init__.py  cli.py  formatter.py  isotp.py  monitor.py  stats.py  stats_formatter.py  transaction.py  uds.py
tests/: test_ignore_requesters.py  test_isotp.py  test_stats.py  test_transaction.py  test_uds.py
