[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udsdump"
version = "0.1.0"
description = "UDS-on-CAN traffic monitor – one layer above candump"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "python-can>=4.3",
]

[project.scripts]
udsdump = "udsdump.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
